# tiago_lfc

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  dependencies.repos  dependencies_lfc.repos  package.xml
config/: agimus_controller_parameters.yaml  joint_state_broadcaster_parameters.yaml  lfc_parameters.yaml
dependencies/: agimus_mpc.repos  lfc.repos  tiago_robot.repos
dependencies/patch/: agimus_controller.patch  agimus_controller_fix_lfc_name.patch  agimus_controller_remove_colmpc.patch
launch/: gz_control.launch.py  gz_server.launch.py  gz_spawn.launch.py  gz_spawn_tiago.launch.py  gz_tiago.launch.py  gz_tiago_lfc.launch.py  load_controllers.launch.py  robot_description.launch.py  robot_description_from_xacro.launch.py  robot_state_publisher.launch.py  robot_state_publisher_from_xacro.launch.py  switch_controllers.launch.py  tiago_robot_description.launch.py  tiago_robot_state_publisher.launch.py  tiago_sim.launch.py  tiago_state_publisher.launch.py
tiago_lfc/: __init__.py
tiago_lfc/launch/: __init__.py  arguments.py  gz.py  robot_description.py  robot_state_publisher.py  ros2_control.py
tiago_lfc/opaque_function/: __init__.py  algorithms.py  arguments.py  compare.py  config.py  context_value.py  core.py  log.py  make_opaque_function_that.py  opaque_function_wrappers.py  types.py  urdf.py
tiago_sim/: __init__.py
tiago_sim/launch/: __init__.py  arguments.py  gz.py  invoke.py  robot_description.py  robot_state_publisher.py  utils.py
tiago_sim/opaque_function/: __init__.py  algorithms.py  apply.py  config.py  context_value.py  functional.py  (+4 more)
